# retail

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  apprunner.yaml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: a95218b29123_add_private_key_column.py
src/retail/: pyproject.toml  requirements.txt
src/retail/api/v1/: auth.py
src/retail/core/: auth.py  database.py  database.pyi  dependencies.py  dependencies.pyi  init_db.py  main.py  main.pyi  models.py  models.pyi  profile_ops.py  profile_ops.pyi  settings.py  settings.pyi
src/retail/plugins/: square.py  square.pyi  square_plugin.py
src/retail_backend/api/v1/: auth.py
src/retail_backend/core/: auth.py  database.py  database.pyi  dependencies.py  dependencies.pyi  init_db.py  main.py  main.pyi  merchant.py  merchant.pyi  models.py  models.pyi  settings.py  settings.pyi
src/retail_backend/core/migrations/: add_private_key.py
src/retail_backend/plugins/: square.py  square.pyi
tests/: test_auth.py  test_square.py
